# vulnerable

./: admin_panel.py  api_client.py  database.py  edge_cases.py  pyproject.toml  requirements-vulnerable.txt  vulnerable_app.py
